checkboxes hiding behind search bar; error fixed in venue filter

--- a/src/pages/venues/style.scss
+++ b/src/pages/venues/style.scss
@@ -2703,7 +2703,6 @@
   font-size: 17px;
   overflow: scroll;
   // margin-left: 20px;
-  padding: 12px 12px;
   /* Space between the buttons and content */
 }
 
@@ -2714,7 +2713,12 @@
   position: fixed;
   background: white;
   z-index: 10;
-  width: 48% !important;
+  width: 50% !important;
+  padding: 10px 0px 10px 10px;
+}
+.filterCheckouts{
+  padding: 12px 12px;
+  margin-top: 35px;
 }
 .form-group .form-control {
   padding: 5px;
